--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <header class="bg-secondary pt-5 pb-2">
+  <header class="bg-warning pt-5 pb-2">
     <div class="container">
       <div class="row">
-        <h1 class="col text-center text-white mb-5">Form</h1>
+        <h1 class="col text-center text-white ">My site</h1>
       </div>
     </div>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-warning">
+      <div class="container">
         <a class="navbar-brand" href="#">Меню</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,30 +78,7 @@
 
   <div class="container">
     <div class="row">
-      <main class="col-xxl-7 col-xl-8 main bg-primary">
-        <form>
-          <div class="mb-3">
-            <label class="form-label" for="login">Логин</label>
-            <input id="login" type="text" placeholder="Логин" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="password">Пароль</label>
-            <input id="password" type="text" placeholder="Пароль" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="email">Email</label>
-            <input id="email" type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="city">Email</label>
-            <input id="city" type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="birthday">>Day of birthday</label>
-            <input id="birthday" type="text" placeholder="Email" class="form-control">
-          </div>
-          <button class="btn btn-success">Регистрация</button>
-        </form>
+      <main class="col-xxl-5 col-xl-8 main py-2 px-2">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
@@ -154,7 +131,7 @@
         </div>
 
       </main>
-      <div class="col-xxl-3 col-xl-4 col-lg-6 left bg-danger order-first order-lg-0 mb-5">
+      <div class="left col-xxl-4 row-xxl-1-12 col-xl-4 col-lg-6 order-first order-lg-0 py-2 px-2">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -207,7 +184,31 @@
           </button>
         </div>
       </div>
-      <div class="col-xxl-2 col-xl-12 col-lg-6 right bg-success mb-5"><span>Right</span></div>
+      <div class="col-xxl-3 col-xl-12 col-lg-6 right py-2 px-2">
+        <form class="reg-form">
+          <div class="mb-3">
+            <label class="form-label" for="login">Логин</label>
+            <input id="login" type="text" placeholder="Логин" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="password">Пароль</label>
+            <input id="password" type="text" placeholder="Пароль" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="email">Email</label>
+            <input id="email" type="text" placeholder="Email" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="city">Адрес</label>
+            <input id="city" type="text" placeholder="Адрес" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="birthday">Дата рождения</label>
+            <input id="birthday" type="text" placeholder="../../.." class="form-control">
+          </div>
+          <button class="btn btn-success">Регистрация</button>
+        </form>
+      </div>
     </div>
   </div>
 
